# odd-raycaster

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.txt
include/: collision.h  cute_c2.h  draw.h  drawRaycast.h  enemy.h  fizzlefade.h  gameState.h  global.h  input.h  map.h  menuState.h  player.h  projectile.h  rays.h  sprite.h  utils.h  vec2f.h
src/: collision.c  draw.c  drawRaycast.c  enemy.c  fizzlefade.c  gameState.c  input.c  main.c  map.c  menuState.c  player.c  projectile.c  rays.c  sprite.c  utils.c  vec2f.c
